<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".features.movies.movie_detail.MovieDetailFragment">

    <ImageView
        android:id="@+id/ivBackground"
        android:contentDescription="@string/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@tools:sample/avatars"
        android:scaleType="centerCrop"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <LinearLayout
                android:id="@+id/llHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >

                <ImageView
                    android:id="@+id/ivMovieBackdrop"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    tools:src="@drawable/ic_launcher_background"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/movie_backdrop"
                    />

                <TextView
                    android:id="@+id/tvMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Movie Title"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:letterSpacing=".1"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:paddingHorizontal="18dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Movie Title"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="18dp"
                    android:textStyle="italic"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/countries"
                    android:paddingHorizontal="18dp"
                    android:layout_marginTop="30dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/tvCountries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Movie Title"
                    android:paddingHorizontal="18dp"
                    android:textStyle="italic"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/companies"
                    android:paddingHorizontal="18dp"
                    android:layout_marginTop="30dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/tvCompanies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Movie Title"
                    android:paddingHorizontal="18dp"
                    android:textStyle="italic"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>