<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".features.movies.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginVertical="20dp"
            >
            <ProgressBar
                android:id="@+id/pbLoadingNowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/now_playing_movies"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="20dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcyNowPlayingMovies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginVertical="20dp"
            >
            <ProgressBar
                android:id="@+id/pbLoadingTopRatedMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/top_rated_movies"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="20dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcyTopRatedMovies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginVertical="20dp"
            >
            <ProgressBar
                android:id="@+id/pbLoadingPopularMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/popular_movies"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="20dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcyPopularMovies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>